swagger docs and renumbering the transaction export in transacion_id
