# src/controller/transaction-controller.js
@@ -14,7 +14,7 @@ const getShifts = async (request, response, next) => {
 
 const getTransactions = async (request, response, next) => {
   try {
-    const results = await transactionService.getTransactions(request);
+    const results = await transactionService.exportTransactions(request);
     response.status(200).json({
       data: results.listsOfTransactions.rows,
       paging: {
@@ -32,14 +32,18 @@ const getTransactions = async (request, response, next) => {
 const exportCSV = async (request, response, next) => {
   try {
     const [workbook, sheet] = ExportHelper.generateSheet();
-    const transactions = await transactionService.getTransactions(request);
-
+    const transactions = await transactionService.exportTransactions(request);
     if (transactions.length == 0) {
       response.status(204).end();
     } else {
       transactions.forEach((transaction) => {
         sheet.addRow(transaction);
       });
+      
+      /* change numbering in transactionID */
+      for (let x = 1; x <= transactions.length; x++) {
+        sheet.getRow(x+1).getCell(1).value = x
+      }
 
       response.setHeader("Content-Type", "text/csv");
 
@@ -68,6 +72,11 @@ const exportExcel = async (request, response, next) => {
       transactions.forEach((transaction) => {
         sheet.addRow(transaction);
       });
+
+      /* change numbering in transactionID */
+      for (let x = 1; x <= transactions.length; x++) {
+        sheet.getRow(x+1).getCell(1).value = x
+      }
 
       response.setHeader(
         "Content-Type",
